--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                 <li><a href="#inicio">Início</a></li>
                 <li><a href="#sobre">Sobre Nós</a></li>
                 <li><a href="#historia">História</a></li>
-                <li><a href="#equipe">Nossa Equipe</a></li>
+                <li><a href="#fundadores">Fundadores</a></li>
+                <li><a href="#membros">Membros</a></li>
                 <li><a href="#servicos">Serviços</a></li>
                 <li><a href="#metodologia">Metodologia</a></li>
                 <li><a href="#recursos">Recursos</a></li>
@@ -27,7 +28,7 @@
         </nav>
         <div class="sidebar-footer">
             <p>&copy; 2025 Eldoria Team</p>
-            </div>
+        </div>
     </aside>
 
     <div class="content-wrapper">
@@ -101,11 +102,11 @@
                 </div>
             </section>
 
-            <section id="equipe" class="content-section">
-                <h2 class="section-title">Nossa Equipe - Os Pilares Invisíveis</h2>
+            <section id="fundadores" class="content-section">
+                <h2 class="section-title">NOSSOS FUNDADORES</h2>
                 <div class="founders-grid">
                     <div class="founder-card">
-                        <img src="https://i.pinimg.com/736x/18/63/1e/18631eba91a083595b0dc13bab3ee20b.jpg" alt="Avatar Icky" class="founder-avatar">
+                        <img src="https://i.pinimg.com/736x/2d/67/9e/2d679eca7f0a132e5eb8baae905765d2.jpg" alt="Avatar Icky" class="founder-avatar">
                         <div class="founder-info">
                             <h3>ICKY</h3>
                             <p class="role">INVESTIGADOR CHEFE / ARQUITETO DE INTELIGÊNCIA</p>
@@ -143,9 +144,13 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </section>
 
-                    <div class="founder-card">
-                        <img src="https://i.pinimg.com/736x/e9/9e/44/e99e44589d46bd460523bfe7f68abe11.jpg" alt="Avatar Zn" class="founder-avatar">
+            <section id="membros" class="content-section">
+                <h2 class="section-title">NOSSOS MEMBROS</h2>
+                <div class="founders-grid"> <div class="founder-card">
+                        <img src="https://i.pinimg.com/736x/fe/d4/69/fed4695952fa30331ca20f7a263445fc.jpg" alt="Avatar Zn" class="founder-avatar">
                         <div class="founder-info">
                             <h3>ZN</h3>
                             <p class="role">SUPORTE E COMUNICAÇÃO SEGURA / ORGANIZAÇÃO DE EVIDÊNCIAS</p>
@@ -180,7 +185,7 @@
                         </p>
                         <ul>
                             <li><strong>Análise de Phishing e Fraudes:</strong> Rastreamento de campanhas, identificação de infraestrutura e atores.</li>
-                            <li><strong>Resposta a Incidentes de Malware:</strong> Análise de infecções, cadeia de ataque e remoção.</li>
+                            <li><strong>Resposta a Incidentes de Malware:</b> Análise de infecções, cadeia de ataque e remoção.</li>
                             <li><strong>Investigação de Extorsão Digital:</strong> Mapeamento de grupos de ransomware/extorsão e busca por soluções.</li>
                             <li><strong>Identificação de Atores Maliciosos:</strong> Perfilamento detalhado de indivíduos ou grupos responsáveis por ataques.</li>
                         </ul>
@@ -358,7 +363,7 @@
                                     <li><strong>Urgência Falsa:</strong> Pedidos que exigem ação imediata.</li>
                                     <li><strong>Ameaças ou Medo:</strong> Tentativas de intimidação (ex: "Sua conta será bloqueada").</li>
                                     <li><strong>Ofertas Tentadoras:</strong> Ganhos "fáceis" ou descontos inacreditáveis.</li>
-                                    <li><strong>Personificação:</strong> Fingir ser uma autoridade (banco, empresa, colega).</li>
+                                    <li><li><strong>Personificação:</strong> Fingir ser uma autoridade (banco, empresa, colega).</li>
                                     <li><strong>Informações Demais ou de Menos:</strong> Detalhes inconsistentes ou falta de detalhes importantes.</li>
                                     <li><strong>Pedidos Incomuns:</strong> Solicitação de dados confidenciais por canais não usuais.</li>
                                 </ul>
@@ -476,7 +481,7 @@
                         A equipe Eldoria pode fornecer canais de comunicação adicionais e mais específicos (como endereços PGP/GPG para e-mail criptografado ou coordenadas para plataformas de mensagens seguras) após uma validação inicial de sua necessidade e urgência de contato. Este processo garante a segurança de ambas as partes.
                     </p>
                     <p>
-                        Por favor, seja o mais conciso e objetivo possível em sua comunicação inicial. Lembre-se: não solicitamos informações pessoais desnecessárias ou dados financeiros. Desconfie de qualquer solicitação nesse sentido que alegue vir do Eldoria Team.
+                        Por favor, seja o mais conciso e objetivo possível em sua comunicação inicial. Lembre-se: não solicitamos informações pessoais desnecessárias ou dados financeiros. Desconfie de qualquer solicitação nesse sentido que alegue ser do Eldoria Team.
                     </p>
                     <p>
                         Sua segurança e confidencialidade são a nossa prioridade.
