--- a/index.html
+++ b/index.html
@@ -472,9 +472,9 @@
                 <div class="section-text contact-info">
                     <p>Para entrar em contato com o Eldoria Team, seja para denúncias urgentes de crimes cibernéticos, consultas estratégicas ou para expressar seu interesse em se juntar à equipe, por favor, utilize nossos canais de comunicação seguros e criptografados. Dada a natureza sensível de nossas operações e a prioridade de manter a discrição, a escolha do método de contato é crucial.</p>
                     <p><strong>Canal Preferencial:</strong></p>
-                    <p><strong>Keybase:</strong> <code>@EldoriaTeam</code> (username)</p>
+                    <p><strong>Discord:</strong> <code>@EldoriaTeam</code> </p>
                     <p>
-                        Recomendamos o uso do Keybase para o primeiro contato devido às suas robustas características de criptografia e verificação de identidade. Por favor, inclua uma breve descrição do motivo do seu contato e, se aplicável, um resumo conciso das informações relevantes, sempre prezando pela sua segurança.
+                        Recomendamos o uso do Discord para o primeiro contato devido às suas robustas características de criptografia e verificação de identidade. Por favor, inclua uma breve descrição do motivo do seu contato e, se aplicável, um resumo conciso das informações relevantes, sempre prezando pela sua segurança.
                     </p>
                     <p><strong>Outros Canais de Comunicação Seguros:</strong></p>
                     <p>
