--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="founder-info">
                         <h3>ICKY</h3>
                         <p class="role">INVESTIGADOR CHEFE / DONO</p>
-                        <p class="handle">@Icky_Eldoria</p>
+                        <p class="handle">@hcwg</p>
                         <p class="description">Líder nato e estrategista principal, Icky coordena as operações mais complexas e define as táticas de investigação, utilizando seu vasto conhecimento em OSINT e engenharia social para desmantelar redes criminosas. Sua visão é a espinha dorsal da Eldoria Team.</p>
                         <div class="founder-skills">
                             <span class="founder-skill">OSINT Avançado</span>
@@ -67,8 +67,8 @@
                     <img src="https://media.discordapp.net/attachments/1385058991620493423/1389104163065167963/5c26f600c2664ed7d19b87e2d0dc3c62.jpg?ex=68636790&is=68621610&hm=fae60f8ea6a8320cc7cded62280d467ac49ccddb3ce0d933d1e4cdcaa8b58fb2&=" alt="Avatar Noir" class="founder-avatar">
                     <div class="founder-info">
                         <h3>NOIR</h3>
-                        <p class="role">ESPECIALISTA FORENSE / SUB DONO</p>
-                        <p class="handle">@Noir_Eldoria</p>
+                        <p class="role">ESPECIALISTA FORENSE / DONO</p>
+                        <p class="handle">@noirsec</p>
                         <p class="description">Com uma mente analítica e habilidade excepcional, Noir é o mestre da análise de dados forenses, engenharia reversa e detecção de malware. Ele é o responsável por extrair e decifrar as evidências digitais mais complexas, transformando bits de informação em provas irrefutáveis.</p>
                         <div class="founder-skills">
                             <span class="founder-skill">Análise Forense</span>
@@ -95,7 +95,7 @@
                     <div class="founder-info">
                         <h3>ZN</h3>
                         <p class="role">SUPORTE E COMUNICAÇÃO SEGURA / ORGANIZAÇÃO DE EVIDÊNCIAS</p>
-                        <p class="handle">@ZN_Eldoria</p>
+                        <p class="handle">@bo5e</p>
                         <p class="description">Zn é o elo crucial entre a Eldoria Team e as vítimas, garantindo que cada comunicação seja segura e empática. Sua expertise em protocolos de segurança e organização de dados é fundamental para gerenciar o fluxo de informações e apoiar a equipe na coleta de provas de forma eficaz e discreta.</p>
                         <div class="founder-skills">
                             <span class="founder-skill">Apoio à Vítima</span>
