--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <h2 class="main-title">ELDORIA TEAM - AÇÃO ANÔNIMA CONTRA ABUSOS ONLINE</h2>
             <p class="subtitle">Contra exploração infantil, estupro virtual, crueldade animal e violência doméstica no Discord e além.</p>
-            <p class="slogan">Expondo a escuridão, protegendo as vítimas.</p>
+            <p class="slogan">Apenas os melhores do nosso lado.</p>
         </section>
 
         <section id="fundadores" class="content-section">
