--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <h3>ICKY</h3>
                         <p class="role">INVESTIGADOR CHEFE / DONO</p>
                         <p class="handle">@hcwg</p>
-                        <p class="description">Líder nato e estrategista principal, Icky coordena as operações mais complexas e define as táticas de investigação, utilizando seu vasto conhecimento em OSINT e engenharia social para desmantelar redes criminosas. Sua visão é a espinha dorsal da Eldoria Team.</p>
+                        <p class="description">Líder principal, coordena as operações mais complexas e define as táticas de investigação, utilizando seu vasto conhecimento em OSINT e engenharia social para desmantelar redes criminosas. Icky.</p>
                         <div class="founder-skills">
                             <span class="founder-skill">OSINT Avançado</span>
                             <span class="founder-skill">Engenharia Social</span>
