--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <nav>
             <ul>
                 <li><a href="#inicio">Home</a></li>
+                <li><a href="#contato-protonmail">ProtonMail</a></li>
                 <li><a href="#fundadores">Founders</a></li>
                 <li><a href="#membros">Members</a></li>
                 <li><a href="#operacoes">Operations</a></li>
@@ -39,12 +40,19 @@
             <div class="logo-e-container">
                 <h1 class="logo-e">𝕰</h1>
             </div>
-            <h2 class="main-title">ELDORIA TEAM - ELITE CYBER DEFENSE</h2>
+            <h2 class="main-title">ELDORIA TEAM</h2>
             <p class="subtitle">Contra exploração infantil, estupro virtual, crueldade animal e violência doméstica no Discord e além.</p>
             <p class="slogan">Only the best on our side.</p>
         </section>
 
         <section id="fundadores" class="content-section">
+            <section class="content-section" id="contato-protonmail" style="padding-top: 20px; padding-bottom: 0; margin-top: -30px;">
+                <div class="section-text">
+                    <p style="text-align: center; font-size: 1.1em; color: #ffffff; margin-bottom: 0;">
+                        <a href="mailto:eldoriateam@protonmail.com" style="color: #ffffff; text-decoration: underline;">eldoriateam@protonmail.com</a>
+                    </p>
+                </div>
+            </section>
             <h2 class="section-title">OUR FOUNDERS</h2>
             <div class="founders-grid">
                 <div class="founder-card">
