--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="founder-card">
-                    <img src="https://media.discordapp.net/attachments/1385058991620493423/1389104163065167963/5c26f600c2664ed7d19b87e2d0dc3c62.jpg?ex=68636790&is=68621610&hm=fae60f8ea6a8320cc7cded62280d467ac49ccddb3ce0d933d1e4cdcaa8b58fb2&=" alt="Avatar Noir" class="founder-avatar">
+                    <img src="https://i.pinimg.com/736x/d9/17/86/d917863d8297eb64014f2b84cf7ce462.jpg" alt="Avatar Noir" class="founder-avatar">
                     <div class="founder-info">
                         <h3>NOIR</h3>
                         <p class="role">FORENSIC SPECIALIST / OWNER</p>
