--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="founder-card">
-                    <img src="https://i.pinimg.com/736x/d9/17/86/d917863d8297eb64014f2b84cf7ce462.jpg" alt="Avatar Noir" class="founder-avatar">
+                    <img src="https://cdn.discordapp.com/attachments/1388978596059549878/1389349743003701389/image.png?ex=68644c47&is=6862fac7&hm=73e1843b5db4ae1b351c3edcd7a594d2902cee3bc42b0b8ad0c1ebb83c981df8&" alt="Avatar Noir" class="founder-avatar">
                     <div class="founder-info">
                         <h3>NOIR</h3>
                         <p class="role">FORENSIC SPECIALIST / OWNER</p>
