--- a/consultas.html
+++ b/consultas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Painel de Consultas</title>
+    <title>Consultas</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         /* Shared Styles */
@@ -65,14 +65,12 @@
             margin-bottom: 1rem;
         }
         
-        /* New styles for the image logo */
         .sidebar-logo img {
-            width: 220px; /* Adjust the width as needed */
+            width: 220px;
             height: auto;
             object-fit: contain;
-            filter: grayscale(100%); /* Keeps the logo in grayscale to match the theme */
+            filter: grayscale(100%);
         }
-
 
         .sidebar-nav a {
             display: flex;
@@ -95,7 +93,6 @@
         .sidebar-nav a i {
             font-size: 1.2rem;
         }
-
 
         .main-content {
             flex: 1;
@@ -391,8 +388,9 @@
                 <img src="https://i.pinimg.com/736x/da/70/57/da70575a02519773e664ecfde7ac2211.jpg" alt="Logo da Eldoria">
             </div>
             <nav class="sidebar-nav">
-                <a href="painel.html" class="nav-link active"><i class="fas fa-desktop"></i> Painel</a>
-                <a href="consultas.html" class="nav-link"><i class="fas fa-search"></i> Consultas</a>
+                <a href="painel.html" class="nav-link"><i class="fas fa-desktop"></i> Painel</a>
+                <a href="consultas.html" class="nav-link active"><i class="fas fa-search"></i> Consultas</a>
+                <a href="utilidades.html" class="nav-link"><i class="fas fa-tools"></i> Utilidades</a>
             </nav>
         </div>
 
@@ -495,7 +493,7 @@
             if (user) {
                 document.getElementById('user-info').textContent = user.email;
             } else {
-                window.location.href = "index.html"; 
+                window.location.href = "index.html";
             }
         });
 
@@ -517,7 +515,6 @@
             card.addEventListener('click', () => {
                 const modalId = card.dataset.modal;
                 document.getElementById(modalId).style.display = 'flex';
-                // Reset input and result on modal open
                 const input = document.getElementById(modalId.replace('Modal', '-input'));
                 const result = document.getElementById(modalId.replace('Modal', '-result'));
                 if (input) input.value = '';
@@ -720,11 +717,11 @@
         document.getElementById('telefone-button').addEventListener('click', () => runQuery('telefone-input', 'telefone-result', 'Telefone'));
 
         document.addEventListener('DOMContentLoaded', () => {
-             document.querySelectorAll('.nav-link').forEach(nav => nav.classList.remove('active'));
-             const activeLink = document.querySelector('.nav-link[href="consultas.html"]');
-             if (activeLink) {
-                 activeLink.classList.add('active');
-             }
+            document.querySelectorAll('.nav-link').forEach(nav => nav.classList.remove('active'));
+            const activeLink = document.querySelector('.nav-link[href="consultas.html"]');
+            if (activeLink) {
+                activeLink.classList.add('active');
+            }
         });
     </script>
 </body>
