--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Login</title>
+        <title></title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <style>
             * {
@@ -200,7 +200,7 @@
         <div class="container">
             <div class="form-container">
                 <form id="loginForm" class="form">
-                    <h2>Login</h2>
+                    <h2>eldoria</h2>
                     <div class="input-group">
                         <i class="fas fa-user"></i>
                         <input type="email" id="loginEmail" placeholder="E-mail" required>
@@ -271,4 +271,5 @@
         </script>
     </body>
     </html>
+
 
