--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 font-size: 1.8rem;
                 font-weight: 600;
                 position: relative;
-              
+                animation: glitch 1s infinite;
             }
 
             @keyframes glitch {
@@ -200,7 +200,7 @@
         <div class="container">
             <div class="form-container">
                 <form id="loginForm" class="form">
-                    <h2>eldoria</h2>
+                    <h2>Login</h2>
                     <div class="input-group">
                         <i class="fas fa-user"></i>
                         <input type="email" id="loginEmail" placeholder="E-mail" required>
@@ -271,6 +271,3 @@
         </script>
     </body>
     </html>
-
-
-
